[tool.poetry]
name = "pysparkplus"
version = "0.0.1"
description = ""
authors = ["wiseupdata <silvio.liborio@wiseupdata.com>"]
readme = "README.md"
packages = [{include = "pysparkplus"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
mkdocs-material = "^9.1.6"
mkdocs-material-extensions = "^1.1.1"
mkdocs-jupyter = "^0.24.1"
black = "^23.3.0"
isort = "^5.12.0"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
