[tool.poetry]
name = "pysparkplus"
version = "0.0.1"
authors = ["wiseupdata <silvio.liborio@wiseupdata.com>"]
readme = "README.md"
packages = [{include = "pysparkplus"}]

description = "Pyspark extra functions!"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wiseupdata/pysparkplus"
"Bug Tracker" = "https://github.com/wiseupdata/pysparkplus/issues"


[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.21.2"}
mkdocs-gen-files = "^0.4.0"
mkdocs-section-index = "^0.3.5"
mkdocs-material = "^9.1.6"
mkdocs-material-extensions = "^1.1.1"
mkdocs-jupyter = "^0.24.1"
black = "^23.3.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
mkdocs-literate-nav = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
